# Orpheus

./: README.md  ex.or  todo
c_orpheus/.kdev4/: c_orpheus.kdev4
orpheus/: CMakeLists.txt  orpheus
orpheus/include/: ast.h  env.h  error_handler.h  obj.h  parser.h  scanner.h  token.h  tokentype.h
orpheus/src/: \  ast.cpp  env.cpp  error_handler.cpp  expr.cpp  main.cpp  obj.cpp  objtype.cpp  parser.cpp  scanner.cpp  stmt.cpp  token.cpp  tokentype.cpp
orpheus/tests/: block.or  calltype.or  func.or  if.or  maybe.or  nl.or  num.or  nums.or  parse.or  type.or  weird.or  while.or  ws.or
py_orpheus/src/: error_handler.py  eval.py  obj.py  parser.py  tokens.py  tokentype.py  tree.py
py_orpheus/src/tests/: fizzbuzz.or  hash.or  interop.or  is.or  people.or  strf  t.or
src/: \  builtin.py  environment.py  error_handler.py  eval.py  obj.py  orpheus.py  parser.py  scanner.py  todo  tokens.py  tokentype.py  tree.py
src/tests/: andor.or  array.or  block.or  counter.or  eval.or  fizzbuzz.or  fn.or  func.or  hash.or  indents.or  is.or  maybe.or  num.or  nums.or  prefix.or  rec.or  scope.or  statements.or  t.or  test.or  weirdfizz.or  ws.or
